kube/about.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc2
  labels:
    app: svc2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: svc2
  template:
    metadata:
      labels:
        app: svc2
    spec:
      containers:
      - name: svc2
        image: miggylol/svc2
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: svc2
  labels:
    app: svc2
spec:
  type: NodePort
  selector:
    app: svc2
  ports:
  - protocol: TCP
    port: 8081
