kube/home.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home
  labels:
    app: home
spec:
  replicas: 3
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      labels:
        app: home
    spec:
      containers:
      - name: home
        image: miggylol/home
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: home
  labels:
    app: home
spec:
  type: NodePort
  selector:
    app: home
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
