kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gcp-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: home
          servicePort: 8080
      - path: /a/*
        backend:
          serviceName: about
          servicePort: 8081
